# code-graph-analysis-pipeline

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  COMMANDS.md  CYPHER.md  ENVIRONMENT_VARIABLES.md  GETTING_STARTED.md  INTEGRATION.md  JQAssistantGraphDatabaseCompatibilityIssues.md  MIGRATION.md  README.md  SCRIPTS.md  conda-environment.yml  init.sh  markdown-lint-check-config.json  pyproject.toml  renovate.json  requirements.txt
.github/: pull_request_template.md
cypher/: Adding_the_artifact_name_temporarily_to_the_Package_node_using_map_projection.cypher  CYPHER.md  Candidates_for_Interface_Segregation.cypher  Community_Detection_Label_Propagation.cypher  Community_Detection_Weakly_Connected_Components.cypher  Count_nodes_and_relationships.cypher  Create_Java_Type_index_for_full_qualified_name.cypher  Create_Typescript_index_for_full_qualified_name.cypher  Create_Typescript_index_for_name.cypher  Create_a_DEPENDS_ON_relationship_for_every_DEPENDS_ON_ARTIFACT.cypher  Create_a_DEPENDS_ON_relationship_for_every_DEPENDS_ON_PACKAGE.cypher  Create_index_for_full_qualified_type_name.cypher  Data_verification_DEPENDS_ON_relationships.cypher  Export_the_whole_database_as_CSV.cypher  Extract_Custom_Manifest_Entries.cypher  Get_Awesome_Procedures_On_Cypher_APOC_Version.cypher  List_all_existing_artifacts.cypher
graph-visualization/: DEPRECATED.md  README.md  index.css  package-lock.json  package.json  renderVisualizations.js  vis-configuration-presets.js  visualization-pagination.js
jupyter/: ArtifactDependencies.ipynb  DependenciesGraphExplorationJava.ipynb  (+34 more)
(+4064 files in other folders)
