[project]
name = "code-graph-analysis-pipeline"
version = "4.0.1"
requires-python = ">=3.12,<3.14"
dependencies = [
    # --- Jupyter (for notebook environments) ---
    "ipykernel==7.2.0",
    "nbformat==5.10.4", # Required for plotly to render plots in notebooks.
    # --- Data manipulation and plotting ---
    "matplotlib==3.10.9",
    "numpy==2.2.5",
    "pandas==2.3.3",
    "pip==26.1",
    # --- Visualization ---
    "wordcloud==1.9.6",
    "monotonic==1.6",
    "plotly[kaleido]==6.7.0",
    "seaborn==0.13.2", # To visualize clustering results
    # --- Machine Learning / Optimization ---
    "scikit-learn==1.8.0",
    "optuna==4.7.0",
    "umap-learn==0.5.11", # Dimensionality reduction to visualize node embeddings in 2D
    # --- Database connector ---
    "neo4j==6.2.0",
    # --- Native/scientific packages (may require compilation) ---
    # These are included but may cause install errors in pip/venv
    "shap==0.50.0", # For e.g. explaining anomaly detection results
]

[tool.uv]
# uv is the primary Python package manager for this project.
# conda-environment.yml remains supported as an optional path.
# Run `uv sync --frozen` to install, `uv lock --check` to verify lockfile.
